# durian_project

./: Dockerfile  Readme.md  docker-compose.yml  ros_entrypoint.sh
dev_ws/install/: setup.sh
dev_ws/install/robot_main/share/robot_main/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
dev_ws/install/robot_main/share/robot_main/cmake/: robot_mainConfig.cmake
dev_ws/log/: latest_build
dev_ws/src/foxglove_bridge/: package.xml  setup.cfg  setup.py
dev_ws/src/robot_description/: CMakeLists.txt  package.xml
dev_ws/src/robot_description/meshes/: type.dae  tyre_stl.STL
dev_ws/src/robot_description/urdf/: grip.urdf.xacro  robot.urdf.xacro  robot_core.xacro  robot_type.xacro
dev_ws/src/robot_main/: CMakeLists.txt  package.xml
dev_ws/src/robot_nav2/: CMakeLists.txt  package.xml
dev_ws/src/robot_simulation/: package.xml  setup.py
dev_ws/src/robot_simulation/config/: robot_config.yaml
dev_ws/src/robot_simulation/launch/: robot_bringup.launch.py  summon.launch.py
dev_ws/src/robot_world/: CMakeLists.txt  package.xml
dev_ws/src/robot_world/hooks/: robot_world.dsv.in
dev_ws/src/robot_world/world/: empty_world.sdf
docker/ros2/: requirements.txt
docker/ros2/.ros/log/: latest
src/robot_main/: CMakeLists.txt  package.xml
